--- a/index.html
+++ b/index.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hydra</title>
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
-        <div class="logo">
-            <img src="./assets/logo/hydralogo.png" alt="Logo">
-        </div>
-        <nav class="navigation">
-            <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">TECHNOLOGIES</a></li>
-                <li><a href="#">HOW TO</a></li>
-            </ul>
-        </nav>
-        <div class="buttons">
-            <div class="button1">
-                <button>CONTACT US</button>
-            </div>
-            <div class="button2">
-                <button>JOIN HYDRA</button>
-            </div>
-        </div>
+      <div class="logo">
+        <img src="./assets/logo/hydralogo.png" alt="Logo" />
+      </div>
+      <nav class="navigation">
+        <ul>
+          <li><a href="#" class="navigation_button_about">ABOUT</a></li>
+          <li><a href="#" class="navigation_button_services">SERVICES</a></li>
+          <li>
+            <a href="#" class="navigation_button_techologies">TECHNOLOGIES</a>
+          </li>
+          <li><a href="#" class="navigation_button_howto">HOW TO</a></li>
+        </ul>
+      </nav>
+      <div class="menu_buttons">
+        <button class="menu_button_1">CONTACT US</button>
+        <button class="menu_button_2">JOIN HYDRA</button>
+      </div>
     </header>
     <div class="main">
-        <div class="text-area">
-            <h2>Dive Into The Depths Of Virtual Reality</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                sed do eiusmod tempor incididunt ut labore et dolore 
-                nisl tincidunt eget. Lectus mauris eros in vitae .</p>
-            <button>Build your world</button>
-        </div>
-        <div class="picture-area">
-            <img src="./assets/images/Mask group.png" alt="VR Glasses Girl">
-        </div>
+      <div class="main_text-area">
+        <h2>Dive Into The Depths Of Virtual Reality</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore nisl tincidunt eget.
+          Lectus mauris eros in vitae .
+        </p>
+        <button class="main_button">Build your world</button>
+      </div>
     </div>
-    <div class="sections">
-        <section class="section">
-            <h3>Pay Us a Visit</h3>
-            <p>Union St, Seattle, WA 98101, United States</p>
-        </section>
-        <section class="section">
-            <h3>Give Us a Call</h3>
-            <p>(110) 1111-1010</p>
-        </section>
-        <section class="section">
-            <h3>Send Us a Message</h3>
-            <p>Contact@HydraVTech.com</p>
-        </section>
+    <div class="footer_sections">
+      <section class="footer_section_1">
+        <h3>Pay Us a Visit</h3>
+        <p>Union St, Seattle, WA 98101, United States</p>
+      </section>
+      <section class="footer_section_2">
+        <h3>Give Us a Call</h3>
+        <p>(110) 1111-1010</p>
+      </section>
+      <section class="footer_section_3">
+        <h3>Send Us a Message</h3>
+        <p>Contact@HydraVTech.com</p>
+      </section>
     </div>
-</body>
+  </body>
 </html>
